LogOutput/manifests/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-pingpong
spec:
  stripPrefix:
    prefixes:
      - /pingpong
      - /loginput
