LogOutput/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logoutputapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logoutput
  template:
    metadata:
      labels:
        app: logoutput
    spec:
      containers:
        - name: logoutputcontainer
          image: logoutput:1.7
          imagePullPolicy: IfNotPresent
