LogOutput/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: logoutputapp-svc
spec:
  type: ClusterIP
  selector:
    app: logoutput
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: loginputapp-svc
spec:
  type: ClusterIP
  selector:
    app: logoutput
  ports:
    - port: 2346
      protocol: TCP
      targetPort: 3001
