LogOutput/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: logoutputapp-ingress
  annotations: 
    traefik.ingress.kubernetes.io/router.middlewares: default-strip-pingpong@kubernetescrd

spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: logoutputapp-svc
                port:
                  number: 2345
          - path: /pingpong
            pathType: Prefix
            backend:
              service:
                name: ping-pong-app-svc
                port:
                  number: 5555
